complete publisher